--- a/index.html
+++ b/index.html
@@ -23,6 +23,25 @@
         <button id="calculateButton">= Calculate</button>
     </div>
 
+    <!-- Footer -->
+    <footer class="app-footer">
+        <a href="https://buymeacoffee.com/blazpregelj" target="_blank">Buy me Coffee ☕️</a>
+        <div class="social-links">
+            <a href="https://x.com/BPregelj" target="_blank" aria-label="X">
+                <img src="x-icon.svg" alt="X">
+            </a>
+            <a href="https://www.linkedin.com/in/blazpregelj/" target="_blank" aria-label="LinkedIn">
+                <img src="linkedin-icon.svg" alt="LinkedIn">
+            </a>
+            <a href="https://www.reddit.com/user/define_divine/" target="_blank" aria-label="Reddit">
+                <img src="reddit-icon.svg" alt="Reddit">
+            </a>
+            <a href="https://www.instagram.com/podezelski/" target="_blank" aria-label="Instagram">
+                <img src="instagram-icon.svg" alt="Instagram">
+            </a>
+        </div>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
