--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Calculator</title>
+    <!-- Viewport meta tag for mobile responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Include your CSS file -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -23,7 +26,7 @@
         <button id="calculateButton">= Calculate</button>
     </div>
 
-    <!-- Footer -->
+     <!-- Footer -->
     <footer class="app-footer">
         <a href="https://buymeacoffee.com/blazpregelj" target="_blank">Buy me Coffee ☕️</a>
         <div class="social-links">
@@ -42,6 +45,7 @@
         </div>
     </footer>
 
+    <!-- Include your JavaScript file -->
     <script src="script.js"></script>
 </body>
 </html>
